[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/NextButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ChiKareGo2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/SelectionWin.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="SelectionWin" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
options = {
"Contractor": "Contractor will reduce upgrade and renovation costs by 15% ",
"Property Manager": "Property managers earn 85% more income",
"Realtor": "Realtors transact home sales faster"
}

[node name="Panel" type="Panel" parent="."]
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 320.0
margin_bottom = 180.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Panel/VBoxContainer"]
margin_right = 320.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Select a Role"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 35.0
margin_right = 320.0
margin_bottom = 56.0
size_flags_horizontal = 5
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="Left" type="Button" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 84.0
margin_right = 103.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "<"

[node name="OptionText" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_top = 3.0
margin_right = 196.0
margin_bottom = 18.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Contractor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel/VBoxContainer/HBoxContainer/OptionText"]
margin_left = 198.0
margin_top = -9.0
margin_right = 198.0
margin_bottom = 23.0

[node name="Right" type="Button" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 216.0
margin_right = 235.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = ">"

[node name="Description" type="Label" parent="Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 320.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 3 )
text = "Role Descriptoin"
align = 1
valign = 1
autowrap = true
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="item_rect_changed" from="Panel/VBoxContainer/HBoxContainer/OptionText" to="." method="_on_OptionText_item_rect_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Right" to="." method="_on_Right_pressed"]
